2010-02-28  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move "`write' after `creat (F, 0)'" check to configure.in.

	* configure.in: Add check for write(2) after
	creat(2) with mode 0 failing in the "wrong" way.
	(RCS_CBOOL): New AC_DEFUN.
	(BAD_CREAT0): New AC_DEFINE_UNQUOTED.

2010-02-28  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move `psiginfo' check to configure.in.

	* configure.in (psiginfo): Add to `AC_CHECK_FUNCS_ONCE'.

2010-02-28  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move `sigblock' check to configure.in.

	* configure.in (sigblock): Add to `AC_CHECK_FUNCS_ONCE'.

2010-02-28  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move `sigaction' check to configure.in.

	* configure.in (sigaction): Add to `AC_CHECK_FUNCS_ONCE'.

2010-02-28  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move `psignal' check to configure.in.

	* configure.in (psignal): Add to `AC_CHECK_FUNCS_ONCE'.

2010-02-28  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move `seteuid', `setuid' checks to configure.in.

	* configure.in (seteuid, setuid): Add to `AC_CHECK_FUNCS_ONCE'.

2010-02-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move `ftruncate' check to configure.in.

	* configure.in (ftruncate): Add to `AC_CHECK_FUNCS_ONCE'.

2010-02-28  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move `vfork', `fork' checks to configure.in.

	* configure.in (vfork.h): Remove from `AC_CHECK_HEADERS_ONCE'.
	(AC_FUNC_FORK): New.

2010-02-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move `waitpid' check to configure.in.

	* configure.in (waitpid): Add to `AC_CHECK_FUNCS_ONCE'.

2010-02-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move `mktemp' check to configure.in.

	* configure.in (mktemp): Add to `AC_CHECK_FUNCS_ONCE'.

2010-02-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move `getuid', `getpwuid' checks to configure.in.

	* configure.in (getpwuid, getuid): Add to `AC_CHECK_FUNCS_ONCE'.

2010-02-27  Thien-Thi Nguyen  <ttn@gnuvola.org>
