@@ -385,6 +385,26 @@ char buf[17000];
 RCS_CBOOL([BAD_CREAT0],[no],[rcs_cv_wac_ok],
   [Does `write' after `creat (F, 0)' fail in the wrong way?])
 
+AC_CACHE_CHECK([if `fflush' works on input streams],[rcs_cv_flush_in_ok],[
+  rm -f conftest.data
+  echo nonempty > conftest.data
+AC_RUN_IFELSE([AC_LANG_PROGRAM([[
+#include <sys/types.h>
+#include <unistd.h>
+#include <stdio.h>
+]],[
+  FILE *fp = fopen ("conftest.data", "r");
+  return (EOF == getc (fp)
+          || 0 > fseek (fp, 0L, SEEK_SET)
+          || 0 > fflush (fp)
+          || 0 > lseek (fileno (fp), 0, SEEK_CUR));
+])
+],[res=yes],[res=no])
+  rcs_cv_flush_in_ok=$res
+])
+RCS_CBOOL([CAN_FFLUSH_IN],[yes],[rcs_cv_flush_in_ok],
+  [Does `fflush' work on input streams?])
+
 # write it out
 
 AC_CONFIG_FILES([
