@@ -1,5 +1,12 @@
 2010-02-28  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[build] Move "fflush input" check to configure.in.
+
+	* configure.in: Add check for fflush on input stream.
+	(CAN_FFLUSH_IN): New AC_DEFINE_UNQUOTED.
+
+2010-02-28  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[build] Move "`write' after `creat (F, 0)'" check to configure.in.
 
 	* configure.in: Add check for write(2) after
